package MichaelReal.week20_Restaurant;

public class Gericht {
    private String name;
    private double preis;

    public Gericht(String name, double preis) {
        this.name = name;
        this.preis = preis;
    }
}
