package MichaelReal.week20_Restaurant;

public class Getraenk {
    private String name;
    private double preis;

    public Getraenk(String name, double preis) {
        this.name = name;
        this.preis = preis;
    }
}
