package MichaelReal.week20_Restaurant;

public class Hauptkellner extends Kellner {
    public Hauptkellner(String name) {
        super(name);
    }

    // Spezifische Methoden für den Hauptkellner

    public void tischZuweisen(Tisch tisch, Kellner kellner) {
        // Logik zur Zuweisung eines Tisches zu einem Kellner
    }

}
